# zmq-cv

./: CMakeLists.txt  Dockerfile  algorithm.bash  identity.bash  readme.md
CMakeModules/: FindTBB.cmake  FindZMQ.cmake
include/: ffmpeg_io.hpp  tbb_filters.hpp  video_filters.hpp  zmq_filters.hpp  zmq_reader.hpp  zmq_reciever.hpp  zmq_video_capture.hpp
script/: build_deps.bash  install_deps.bash  rename.py
src/: cli.cpp  identity.cpp  perf.cpp  zmq.cpp  zmq_identity.cpp
